--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -12,6 +12,8 @@ spring.datasource.driverClassName=com.mysql.jdbc.Driver
   
 #####ce.read.driverClassName=com.mysql.jdbc.Driver
 
+spring.mvc.static-path-pattern=/public/admin/**
+
 #本地--图片上传地址
 upload_path=E:/Workspaces/ecworkspace/20171207/docs/docs_api/upload/
 #spring 访问地址
