--- a/pom.xml
+++ b/pom.xml
@@ -74,7 +74,6 @@
 			</plugin>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.3.2</version>
 				<configuration>
 					<source>1.8</source>
 					<target>1.8</target>
@@ -96,7 +95,11 @@
 			</resource>
 			<resource>
 				<directory>src/main/resources</directory>
-				<targetPath>BOOT-INF/classes/</targetPath>
+				<filtering>false</filtering> <!-- 关闭过滤器 -->
+				<!-- <includes>
+					<include>**/*.properties</include>
+					<include>**/*.xml</include>
+				</includes> -->
 			</resource>
 		</resources>
 	</build>
