--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -12,12 +12,14 @@ spring.datasource.driverClassName=com.mysql.jdbc.Driver
   
 #####ce.read.driverClassName=com.mysql.jdbc.Driver
 
-spring.mvc.static-path-pattern=/public/admin/**
+
 
 #本地--图片上传地址
 upload_path=E:/Workspaces/ecworkspace/20171207/docs/docs_api/upload/
-#spring 访问地址
-spring.resources.static-locations=file:E:/Workspaces/ecworkspace/20171207/docs/docs_api/upload/
+#spring boot 静态访问路由
+#spring.mvc.static-path-pattern=/public/admin/**
+#spring boot 静态资源地址
+spring.resources.static-locations=classpath:/static,classpath:/public,classpath:/resources,classpath:/META-INF/resources,file:E:/Workspaces/ecworkspace/20171207/docs/docs_api/upload/
 #maxFileSize 单个数据大小 
 #maxRequestSize 是总数据大小
 spring.http.multipart.maxFileSize = 100Mb
