--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -16,6 +16,19 @@ spring.datasource.driverClassName=com.mysql.jdbc.Driver
 
 #server.context-path=/projectFile
 
+#短信验证码
+sms_url=http://39.106.219.228:18888/bsmp/submit
+sms_accessKey=xldm
+sms_secretKey=xldm123
+sms_serviceId=xldm001
+sms_orgId=00010002
+sms_reqId=test
+sms_srcId=
+sms_regReport=false
+sms_expireTime=0
+#短信验证码内容，其中{vcode} 为验证码占位，中文要Unicode  
+sms_vcode_content=test短信内容：验证码为{vcode}
+
 #静态资源
 #spring boot 静态访问路由
 #spring.mvc.static-path-pattern=/public/**
