--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -36,7 +36,7 @@ sms_vcode_content=test短信内容：验证码为{vcode}
 spring.resources.static-locations=classpath:/static,classpath:/public,classpath:/resources,classpath:/META-INF/resources,file:${upload_path},file:${logs_path}
 
 #上传    E:/Workspaces/ecworkspace/20171207/docs/docs_api/upload/
-upload_path=
+upload_path=E:/Workspaces/ecworkspace/website_ccydhz/upload/
 #maxFileSize 单个数据大小 
 #maxRequestSize 是总数据大小
 spring.http.multipart.maxFileSize = 100Mb
