--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -27,7 +27,7 @@ sms_srcId=
 sms_regReport=false
 sms_expireTime=0
 #短信验证码内容，其中{vcode} 为验证码占位，中文要Unicode  
-sms_vcode_content=test\u77ed\u4fe1\u5185\u5bb9：\u9a8c\u8bc1\u7801\u4e3a{vcode}
+sms_vcode_content=test\u77ed\u4fe1\u5185\u5bb9: \u9a8c\u8bc1\u7801\u4e3a{vcode}
 
 #静态资源
 #spring boot 静态访问路由
