--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -5,3 +5,4 @@ encoding//src/main/resources/application-dev.properties=UTF-8
 encoding//src/test/java=UTF-8
 encoding/<project>=UTF-8
 encoding/lib=UTF-8
+encoding/\u90E8\u7F72\u6587\u6863.md=UTF-8
