--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -29,6 +29,12 @@ sms_expireTime=0
 #短信验证码内容，其中{vcode} 为验证码占位，中文要Unicode  
 sms_vcode_content=test\u77ed\u4fe1\u5185\u5bb9: \u9a8c\u8bc1\u7801\u4e3a{vcode}
 
+#微信jssdk
+appId=
+appSecret=
+# 当为true时，控制台会输出当前微信jssdk的调用信息，已方便调试
+jssdkDebug=true
+
 #静态资源
 #spring boot 静态访问路由
 #spring.mvc.static-path-pattern=/public/**
