--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -7,7 +7,7 @@ server.port=8085
 
 
 ###########数据库读写分离配置################# 
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/website_ccydhz?characterEncoding=utf8
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/website_ccydhz?characterEncoding=utf8&rewriteBatchedStatements=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
@@ -30,8 +30,8 @@ sms_expireTime=0
 sms_vcode_content=test\u77ed\u4fe1\u5185\u5bb9: \u9a8c\u8bc1\u7801\u4e3a{vcode}
 
 #微信jssdk
-appId=
-appSecret=
+appId=wx01ba842a5521a375
+appSecret=a8ce378f5c953cf8a17421f712c5a9ef
 # 当为true时，控制台会输出当前微信jssdk的调用信息，已方便调试
 jssdkDebug=true
 
