更新上传，添加前缀方便nginx代理。

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -43,6 +43,7 @@ spring.resources.static-locations=classpath:/static,classpath:/public,classpath:
 
 #上传    E:/Workspaces/ecworkspace/20171207/docs/docs_api/upload/
 upload_path=E:/Workspaces/ecworkspace/website_ccydhz/upload/
+upload_proxy_prefix=
 #maxFileSize 单个数据大小 
 #maxRequestSize 是总数据大小
 spring.servlet.multipart.maxFileSize=100MB
